src/objects/OAuthServiceAPI__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <label>Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Service__c</fullName>
        <label>OAuth Service</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>OAuth Service APIs</relationshipLabel>
        <relationshipName>OAuth_Service_APIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <externalId>true</externalId>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Service API</label>
    <nameField>
        <label>API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Service APIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>